--- a/apex-mdapi/src/classes/MetadataServiceTest.cls
+++ b/apex-mdapi/src/classes/MetadataServiceTest.cls
@@ -296,7 +296,6 @@ private class MetadataServiceTest
         new MetadataService.DeployOptions();
         new MetadataService.FlowAssignment();
         new MetadataService.ProfileApplicationVisibility();
-        new MetadataService.UpdateMetadata();
         new MetadataService.CustomApplicationComponents();
         new MetadataService.FlowElementReferenceOrValue();
         new MetadataService.EntitlementTemplate();
@@ -822,5 +821,55 @@ private class MetadataServiceTest
         new MetadataService.CustomMetadataValue();
         new MetadataService.HistoryRetentionPolicy();
         new MetadataService.UpsertResult();
+        new MetaDataService.Territory2RuleAssociation();
+        new MetadataService.ManagedTopics();
+        new MetaDataService.XOrgHub();
+        new MetaDataService.FlowWaitEventInputParameter();
+        new MetadataService.ManagedTopic();
+        new MetadataService.Territory2RuleItem();
+        new MetadataService.DataPipeline();
+        new MetadataService.UiPlugin();
+        new MetadataService.Territory2Rule();
+        new MetaDataService.XOrgHubSharedObject();
+        new MetadataService.Territory2Type();
+        new MetadataService.CorsWhitelistOrigin();
+        new MetadataService.StandardFieldTranslation();
+        new MetadataService.Territory2Model();
+        new MetadataService.PersonListSettings();
+        new MetadataService.ChannelLayoutItem();
+        new MetadataService.FlowWait();
+        new MetadataService.Territory2Settings();
+        new MetadataService.FieldValue();
+        new MetadataService.ChannelLayout();
+        new MetadataService.ReadXOrgHubResult();
+        new MetadataService.readXOrgHubResponse_element();
+        new MetadataService.ReadAuraDefinitionBundleResult();
+        new MetadataService.readAuraDefinitionBundleResponse_element();
+        new MetadataService.ReadTerritory2SettingsResult();
+        new MetadataService.readTerritory2SettingsResponse_element();
+        new MetadataService.ReadTerritory2TypeResult();
+        new MetadataService.readTerritory2TypeResponse_element();
+        new MetadataService.ReadQuoteSettingsResult();
+        new MetadataService.readQuoteSettingsResponse_element();
+        new MetadataService.ReadCorsWhitelistOriginResult();
+        new MetadataService.readCorsWhitelistOriginResponse_element();
+        new MetadataService.ReadManagedTopicsResult();
+        new MetadataService.readManagedTopicsResponse_element();
+        new MetadataService.ReadTerritory2Result();
+        new MetadataService.readTerritory2Response_element();
+        new MetadataService.ReadCommunityResult();
+        new MetadataService.readCommunityResponse_element();
+        new MetadataService.ReadDocumentResult();
+        new MetadataService.readDocumentResponse_element();
+        new MetadataService.ReadTerritory2ModelResult();
+        new MetadataService.readTerritory2ModelResponse_element();
+        new MetadataService.FlowWaitEventOutputParameter();
+        new MetadataService.FlowWaitEvent();
+        new MetadataService.CustomPermissionDependencyRequired();
+        new MetadataService.ReputationBranding();
+        new MetadataService.AuraDefinitionBundle();
+        new MetadataService.FeedItemSettings();
+        new MetadataService.FlowBaseElement();
+        new MetadataService.Territory2();        
     }
 }
