Added create formula field example

--- a/apex-mdapi/src/classes/MetadataServiceExamples.cls
+++ b/apex-mdapi/src/classes/MetadataServiceExamples.cls
@@ -128,6 +128,20 @@ public with sharing class MetadataServiceExamples
 		handleSaveResults(results[0]);
 	}
 	
+	public static void createFormulaField()
+	{
+		MetadataService.MetadataPort service = createService();		
+		MetadataService.CustomField customField = new MetadataService.CustomField();
+		customField.fullName = 'Test__c.TestFormulaField__c';
+		customField.label = 'Test Formula Field';
+		customField.type_x = 'Date';
+		customField.formula = 'TODAY()';
+		List<MetadataService.SaveResult> results = 		
+			service.createMetadata(
+				new MetadataService.Metadata[] { customField });				
+		handleSaveResults(results[0]);
+	}
+	
 	public static void deleteField()
 	{
 		MetadataService.MetadataPort service = createService();		
@@ -978,13 +992,10 @@ public with sharing class MetadataServiceExamples
 					'component.set(\'v.val2\',\'Value2\');' +
 			    '}' +
 			'})'));
-		try { 
-			List<MetadataService.SaveResult> results = 		
-				service.createMetadata(
-					new MetadataService.Metadata[] { auraBundle }); 
-			handleSaveResults(results[0]);			
-		}
-		catch (Exception e) { }
+		List<MetadataService.SaveResult> results = 		
+			service.createMetadata(
+				new MetadataService.Metadata[] { auraBundle }); 
+		handleSaveResults(results[0]);			
 	}
 
 	public class MetadataServiceExamplesException extends Exception { }
